09/05/15-12:50:44: Working on issue #26: Adding support for socket class.
09/05/15-13:59:59: Working on issue #26: Added support to create/close socket.
09/05/15-14:17:26: Working on issue #26: Added support for nvSocket::connect()
09/06/15-13:48:10: Working on issue #35: building bindings for zmq in MQL5
09/06/15-13:53:19: Fixed issue with test during week end : was not producing any deal.
09/06/15-15:11:19: Working on issue #35: init/uninit support for ZMQ contexts.
09/06/15-15:18:57: Working on issue #35: automated init/uninit of ZMQ context.
09/06/15-17:29:18: Working on issue #35: Added initial implementation for ZMQSocket.
09/06/15-17:31:10: Working on issue #35: ensuring that we get some deals for unit tests even during the week end.
09/07/15-19:47:31: Working on issue #35: Adding support for simple send/receive
09/07/15-19:50:16: Renamed the send/receive methods to simple_send/simple_receive.
09/07/15-20:32:24: Added initial implementation for message support in zmq socket.
09/07/15-20:36:46: Using a single instance of the zmq message object in the socket class.
09/07/15-20:47:05: Added unit test for multiple messages sending/receiving with zeroMQ.
09/07/15-21:31:31: Fixed the issue with invalid memcpy op.
09/07/15-21:40:39: Added waiting support in socket tests to avoid some retrieval errors.
09/20/15-22:56:27: Added binaries for Lua app.
09/22/15-00:44:47: Working on issue #38: added pure lua Log manager.
09/23/15-00:24:42: Added support for gui log sink. Added support for visual styles.
09/23/15-09:32:26: Working on issue #38: added initial support to reload the lua MT5 control app.
09/23/15-21:59:57: Working on issue #40: added support for image manager.
09/23/15-22:50:39: Working on issue #38: added support for ZMQ socket with an IUP timer.
09/24/15-20:39:42: Working on issue #41: Added ZMQ socket in portfolio manager.
09/24/15-21:03:33: Working on issue #41: ensuring that we process as many messages as possible on each timer callback call.