@@ -280,3 +280,4 @@ But we need the fix for issue #29 first.
 09/23/15-22:50:39: Working on issue #38: added support for ZMQ socket with an IUP timer.
 09/24/15-20:39:42: Working on issue #41: Added ZMQ socket in portfolio manager.
 09/24/15-21:03:33: Working on issue #41: ensuring that we process as many messages as possible on each timer callback call.
+09/24/15-21:56:02: Added a button to clear the log area.
